# mtgDatabase

./: README.md  app.py  gitignore  main.py  mtg_database.db  pyproject.toml
mdFiles/: Understanding JavaScript Codebase.md  cursor_add_feature_for_larger_card_imag.md  cursor_average_converted_mana_cost_of_g.md  cursor_build_a_searchable_magic_databas.md  cursor_deploying_a_project_on_render.md  cursor_logic_for_split_cards_in_invasio.md  cursor_resolve_import_error_for_request.md  cursor_retrieve_top_10_cards_by_toughne.md  cursor_running_select_statements_in_sql.md  cursor_select_cards_by_artist_and_color.md  cursor_select_cards_with_multiple_color.md  cursor_should_css_and_js_be_external_fi.md  cursor_steps_to_populate_mtg_database_f.md  cursor_troubleshooting_image_magnificat.md
templates/: index.html
templates/css/: styles.css
templates/js/: main.js
