[project]
name = "mtg-frontend"
version = "0.1.0"
description = "Magic: The Gathering database web frontend"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
